data/derived/comb/progs/unify/prog6920.ml.out
Characters 22-32:
  let dupe f = fun x -> (f x, f x)
                        ^^^^^^^^^^
Error: This expression has type 'a * 'a
       This is not a function; it cannot be applied.
